// Plugin-specific config protos for step controllers.

syntax = "proto3";

package nighthawk.adaptive_rps;

message LinearSearchStepControllerConfig {
  int32 minimum_rps = 1;
  int32 maximum_rps = 2;
  int32 step = 3;
}

message BinarySearchStepControllerConfig {
  int32 minimum_rps = 1;
  int32 maximum_rps = 2;
}
